--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+const pageTitle = "Astro Site";
 ---
 
 <html lang="en">
@@ -14,6 +15,6 @@
         <a href="/about/">About</a>
 		<a href="/blog/">Blog</a>
 
-		<h1>Astro Site</h1>
+		<h1>{pageTitle}</h1>
 	</body>
 </html>
